BGR refits and DNB loc

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1074,12 +1074,12 @@ embrace_slovene_minority_title;Embrace the Slovene Minority;;;;;;;;;;;;;
 embrace_slovene_minority_desc;We shall embrace our Slovene citizens, and elevate them to the status shared by that of the Hungarians.;;;;;;;;;;;;;
 embrace_croat_minority_title;Embrace the Croat Minority;;;;;;;;;;;;;
 embrace_croat_minority_desc;We shall embrace our Croat citizens, and elevate them to the status shared by that of the Hungarians.;;;;;;;;;;;;;
-propose_danube_federation_title;Propose the Danubian Federation;;;;;;;;;;;;;
-propose_danube_federation_desc;A new notion has arisen in our country -- one of extending the rights currently enjoyed by the Hungarians to the other Danubian cultures. We cannot, after all, expect that our nation will be able to peacefully continue on with two cultures dominating so many others. Provided the Hungarians will agree, we could unite our cultures into a larger and more peaceful federation of the Danube.;;;;;;;;;;;;;
-become_danube_federation_title;Become the Danube Federation;;;;;;;;;;;;;
-become_danube_federation_desc;Now that the Hungarians and all the Danubian cultures have been consulted, the time has come for the new government to be implemented. Long live the Danubian Federation!;;;;;;;;;;;;;
-end_danube_federation_title;End the Federation;;;;;;;;;;;;;
-end_danube_federation_desc;The concept of the Danubian Federation is no longer valid. We no longer control the territories that were once part of our nation, and thus the time has come to give up the fiction and become Austria once more in truth.;;;;;;;;;;;;;
+propose_danube_federation_title;Propose the Austrian United States;;;;;;;;;;;;;
+propose_danube_federation_desc;A new notion has arisen in our country -- one of extending the rights currently enjoyed by the Hungarians to the other peoples within our domain. We cannot, after all, expect that our union will be able to peacefully continue on with two nations dominating so many others. Provided the Hungarians will agree, we could unite our disparate domains into a larger and more peaceful United States.;;;;;;;;;;;;;
+become_danube_federation_title;Form the United States of Greater Austria;;;;;;;;;;;;;
+become_danube_federation_desc;Now that our peoples have been consulted and Hungarians duly compensanted to prevent any theatrical tantrums, the time has come for the new government to be implemented. Long live the United States of Greater Austria!;;;;;;;;;;;;;
+end_danube_federation_title;End the United States;;;;;;;;;;;;;
+end_danube_federation_desc;The concept of the United States is no longer valid. We no longer control the territories that were once part of our nation, and thus the time has come to give up the fiction and become simply Austria once more in truth.;;;;;;;;;;;;;
 become_austria_title;Become Austria;;;;;;;;;;;;;
 become_austria_desc;The time has come to end the dual monarchy and return to our Austrian heritage.;;;;;;;;;;;;;
 release_galicia_title;Release Galicia-Lodomeria;;;;;;;;;;;;;
