--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -4571,17 +4571,17 @@ EVTDESC98715;Resentment has been brewing among the Slovakians ever since the fed
 EVTNAME98716;The Polish Rebellion;;;;;;;;;;;;;
 EVTDESC98716;Resentment has been brewing among the Polish ever since the federation's formation. Their leaders have been loudly proclaiming that German officials proceeded regardless of Polish concerns. In some cities, the protests have even become violent and authorities report difficulty in keeping things under control.;;;;;;;;;;;;;
 EVTNAME98720;End of the Federation;;;;;;;;;;;;;
-EVTDESC98720;With the loss of Hungary, the entire basis for the Danubian Federation has begun to crumble. The other ethnic groups are questioning the dominance that the German majority will exert without the Hungarians to counter-balance them, and increasingly there are demands for the federation to be undone. Some Germans are fine with this, preferring to return to the Austria that was, but many of them say that these other groups should not be permitted to break away. They say the Austrian Empire should be restored -- by force, if need be.;;;;;;;;;;;;;
+EVTDESC98720;With the loss of Hungary, the entire basis for the United States has begun to crumble. The other ethnic groups are questioning the dominance that the German majority will exert without the Hungarians to counter-balance them, and increasingly there are demands for the federation to be undone. Some Germans are fine with this, preferring to return to the Austria that was, but many of them say that these other groups should not be permitted to break away. They say the Austrian Empire should be restored -- by force, if need be.;;;;;;;;;;;;;
 EVT98720OPTA;We shall become Austria once more.;;;;;;;;;;;;;
-EVT98720OPTB;Never! The Federation lives on!;;;;;;;;;;;;;
+EVT98720OPTB;Never! The States live on!;;;;;;;;;;;;;
 EVTDESC98721;With the Danubian government having become a totalitarian regime, resentment among the various ethnic groups has reached a boiling point. They are demanding their independence, something which would see an end to the federation as it currently exists. The German majority is fine with this, though some are also suggesting the temerity of these rebels is beyond the pale and the federation should be maintained -- by force, if need be.;;;;;;;;;;;;;
 EVTNAME98722;Independence!;;;;;;;;;;;;;
-EVTDESC98722;With the breakup of the Danubian Federation, we have gained our independence at last -- but we must fight to keep it.;;;;;;;;;;;;;
+EVTDESC98722;With the breakup of the United States, we have gained our independence at last -- but we must fight to keep it.;;;;;;;;;;;;;
 EVT98722OPTA;Let the war begin!;;;;;;;;;;;;;
 EVTDESC98723;With the breakup of $FROMCOUNTRY$, we have gained our independence at last.;;;;;;;;;;;;;
 EVT98723OPTA;It's about time!;;;;;;;;;;;;;
 EVTNAME98724;The Danubian Civil War;;;;;;;;;;;;;
-EVTDESC98724;The federation teeters on the verge of extinction, and now we must determine whether we stand by it or fight to at last elicit our independence.;;;;;;;;;;;;;
+EVTDESC98724;The United States teeters on the verge of extinction, and now we must determine whether we stand by it or fight to at last elicit our independence.;;;;;;;;;;;;;
 EVT98724OPTA;The time has come to fight!;;;;;;;;;;;;;
 EVT98724OPTB;We will remain with the federation.;;;;;;;;;;;;;
 EVTNAME199034;Grain Farms in $PROVINCENAME$;;;;;;;;;;;;;
