--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -586,8 +586,8 @@ removed_pm_cd_desc;We cannot change our prime minister so often, as it causes a 
 querimonia;Querimònia;;;;;;;;;;;;
 foreign_imperial_examination;Foreign Imperial Examination;;;;;;;;;;;;
 foreign_imperial_examination_desc;We have abolished the Imperial Examination, and now our examinations are done by foreign officers.;;;;;;;;;;;;
-reforming_to_dnb;Reforming to the Danubian Federation;;;;;;;;;;;;
-reforming_to_dnb_desc;We are reforming our institutions to become the Danubian Federation.;;;;;;;;;;;;
+reforming_to_dnb;Reforming to the United States;;;;;;;;;;;;
+reforming_to_dnb_desc;We are reforming our institutions to become the United States of Greater Austria.;;;;;;;;;;;;
 hebrew_revival;Revival of the Hebrew Language;;;;;;;;;;;;;
 hebrew_revival_desc;With a modern revived form of Hebrew serving as our official and vernacular language, we are uniting Jews across all cultural and linguistic backgrounds into a new Israelite society.;;;;;;;;;;;;;
 standing_army_bach;A Standing Army of Soldiers;;;;;;;;;;;;;
