hello larpers troll face

--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -1015,31 +1015,21 @@ PROV3484;Novaya Zemlya;;;;;;;;;;;;;
 PROV3485;Baffin Island;;;;;;;;;;;;;
 PROV3494;Rekohu;;;;;;;;;;;;;
 BGR;Bulgaria-Romania;;;;;;;;;;;;;
-BGR_absolute_monarchy;The Kingdom of Bulgaria-Romania;;;;;;;;;;;;;
-BGR_hms_government;Bulgaria-Romania;;;;;;;;;;;;;
-BGR_prussian_constitutionalism;Bulgaria-Romania;;;;;;;;;;;;;
-BGR_ADJ;Bulgarian-Romanian;;;;;;;;;;;;;
-BGR_fascist_dictatorship;Bulgarian-Romanian State;;;;;;;;;;;;;
-BGR_proletarian_dictatorship;Bulgarian-Romanian Commune;;;;;;;;;;;;;
-BGR_proletarian_dictatorship_ADJ;Bulgarian-Romanian;;;;;;;;;;;;;
-BGR_democracy;The Bulgarian-Romanian Republic;;;;;;;;;;;;;
-BGR_democracy_ADJ;Bulgarian-Romanian;;;;;;;;;;;;;
-BGR_presidential_dictatorship;Republic of Bulgaria-Romania;;;;;;;;;;;;;
+BGR_ADJ;Bulgaro-Romanian;;;;;;;;;;;;;
+BGR_absolute_empire;The Empire of the Romans;;;;;;;;;;;;;
+BGR_semi_constitutional_empire;The Empire of the Romans;;;;;;;;;;;;;
+BGR_constitutional_empire;The Empire of the Romans;;;;;;;;;;;;;
+BGR_absolute_empire_ADJ;Roman;;;;;;;;;;;;;
+BGR_semi_constitutional_empire_ADJ;Roman;;;;;;;;;;;;;
+BGR_constitutional_empire_ADJ;Roman;;;;;;;;;;;;;
 SZK;Szeklerland;;;;;;;;;;;;;
-SZK_absolute_monarchy;Kingdom of Szeklerland;;;;;;;;;;;;;
-SZK_hms_government;Szeklerland;;;;;;;;;;;;;
-SZK_prussian_constitutionalism;Szeklerland;;;;;;;;;;;;;
 SZK_ADJ;Székely;;;;;;;;;;;;;
 SZK_fascist_dictatorship;Székely State;;;;;;;;;;;;;
 SZK_proletarian_dictatorship;Székely People's Republic;;;;;;;;;;;;;
-SZK_proletarian_dictatorship_ADJ;Székely;;;;;;;;;;;;;
-SZK_democracy;Székely Republic;;;;;;;;;;;;;
-SZK_democracy_ADJ;Székely;;;;;;;;;;;;;
-SZK_presidential_dictatorship;Republic of Szeklerland;;;;;;;;;;;;;
 RIG_absolute_monarchy;Kingdom of Guyane;;;;;;;;;;;;;
 RIG_prussian_constitutionalism;Republic of Guyane;;;;;;;;;;;;;
 RIG_fascist_dictatorship;Independent State of Counani;;;;;;;;;;;;;
-RIG_proletarian_dictatorship;Workers Republic of Guyane;;;;;;;;;;;;;
+RIG_proletarian_dictatorship;Worker's Republic of Guyane;;;;;;;;;;;;;
 RIG_prov_gov_conservative;Free State of Counani;;;;;;;;;;;;;
 RIG_ADJ;Guyanais;;;;;;;;;;;;;
 RIG;Guyane;;;;;;;;;;;;;
