--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1412,12 +1412,13 @@ KTI_communist;The Communist Faction;;;;;;;;;;;;;
 KTI_fascist;The Fascist Faction;;;;;;;;;;;;;
 KYR;Kyrgyzstan;;;;;;;;;;;;;
 KYR_ADJ;Kyrgyz;;;;;;;;;;;;;
-KYR_conservative;Royal Faction;Faction royale;Königsfraktion;;;;;;;;;;;
-KYR_liberal;The Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
-KYR_reactionary;The Nationalist Faction;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;
-KYR_radical;The Radical Faction;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
-KYR_socialist;The Socialist Faction;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;
-KYR_communist;The Communist Faction;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
+KYR_conservative;Sarybagyshtar;Faction royale;Königsfraktion;;;;;;;;;;;
+KYR_liberal;Akylduular;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
+KYR_reactionary;Ulamalar;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;
+KYR_radical;Kulatuuçular;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
+KYR_radical_1;Taraqqiparvarlar;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
+KYR_socialist;Yash Kyrgyzdar;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;
+KYR_communist;Kyrgyz Kommunistteri;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
 KYR_fascist;The Fascist Faction;Faction fasciste;Die faschistische Fraktion;;;;;;;;;;;
 LAN;Lanfang;;;;;;;;;;;;;
 LAN_ADJ;Lanfang;;;;;;;;;;;;;
@@ -4015,6 +4016,12 @@ KYR_hms_government;Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_absolute_monarchy_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_prussian_constitutionalism_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_hms_government_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
+KYR_absolute_empire;The Sarybagysh Empire;;;;;;;;;;;;;
+KYR_semi_constitutional_empire;The Sarybagysh Empire;;;;;;;;;;;;;
+KYR_constitutional_empire;The Sarybagysh Empire;;;;;;;;;;;;;
+KYR_absolute_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
+KYR_semi_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
+KYR_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 IMO_theocracy;Imamate of Oman;;;;;;;;;;;;;
 IMO_theocracy_ADJ;Omani;;;;;;;;;;;;;
 IMO;Hajar;;;;;;;;;;;;;
