--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -601,3 +601,9 @@ SLU_fascist;All-Slavic National Radical Party;;;;;;;;;;;;;
 miskito_nationalists_spawned_title;Greater Mosquitia;;;;;;;;;;;;;
 miskito_nationalists_spawned_desc;The Europeans like to "claim" that "land" is theirs. Most curious! We shall embrace this concept to fit in with the rest of the civilized countries. Mosquitia's natural borders shall be, say... from here to here? Fetch me a pencil posthaste, my good sir! And the good parchment!;;;;;;;;;;;;;
 EVTDESC811;As we have now found ourselves at war with the English, the continued use of the Union Jack on our flag has given way to impracticalities of combat as well as public opposition. An official change to our flag is now simply a necessity.;;;;;;;;;;;;;
+KKP_absolute_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_semi_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_absolute_empire_ADJ;Torani;;;;;;;;;;;;;
+KKP_semi_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
+KKP_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
