Back to Danube Federation
can't be bothered actually

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -932,15 +932,12 @@ DAK_communist;Communist Faction;;;;;;;;;;;;;
 DAK_fascist;Eastward Restorationists;;;;;;;;;;;;;
 DLM;Dalmatia;;;;;;;;;;;;;
 DLM_ADJ;Dalmatian;;;;;;;;;;;;;
-DNB;The United States of Greater Austria;;;;;;;;;;;;;
-DNB_ADJ;Austrian;;;;;;;;;;;;;
-DNB_proletarian_dictatorship;The United Communes of the Danube;;;;;;;;;;;;;
-DNB_proletarian_dictatorship_ADJ;Danubian;;;;;;;;;;;;;
-DNB_fascist_dictatorship;Great Austria;;;;;;;;;;;;;
-DNB_presidential_dictatorship;The Danubian State;;;;;;;;;;;;;
-DNB_presidential_dictatorship_ADJ;Danubian;;;;;;;;;;;;;
-DNB_democracy;The United States of the Danube;;;;;;;;;;;;;
-DNB_democracy_ADJ;Danubian;;;;;;;;;;;;;
+DNB;Danubian Federation;;;;;;;;;;;;;
+DNB_ADJ;Danubian;;;;;;;;;;;;;
+DNB_proletarian_dictatorship;Danubian Republic;;;;;;;;;;;;;
+DNB_fascist_dictatorship;Danubian Republic;;;;;;;;;;;;;
+DNB_presidential_dictatorship;Danubian Republic;;;;;;;;;;;;;
+DNB_parliamentary_republic;Danubian Republic;;;;;;;;;;;;;
 DOI;Dominica;;;;;;;;;;;;;
 DOI_ADJ;Dominican;;;;;;;;;;;;;
 DON;Cossack Republic;;;;;;;;;;;;;
