--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -281,7 +281,7 @@ PROV1485;Tainan;;;;;;;;;;;;;
 PROV1495;Mowming;;;;;;;;;;;;;
 PROV1523;Siangyang;;;;;;;;;;;;;
 PROV1531;Tombara;;;;;;;;;;;;;
-PROV1540;Yonglongsha;;;;;;;;;;;;;
+PROV1540;Chongming;;;;;;;;;;;;;
 PROV1542;Pengcheng;;;;;;;;;;;;;
 PROV1557;Sining;;;;;;;;;;;;;
 PROV1559;Sianfu;;;;;;;;;;;;;
