fixed Yakutat once again + 2 provs

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -33,7 +33,7 @@ PROV35;Cáhe Wicášta;;;;;;;;;;;;;
 PROV36;Makatoosa;;;;;;;;;;;;;
 PROV40;Berens Post;;;;;;;;;;;;;
 PROV41;Miníšatonwanbi;;;;;;;;;;;;;
-PROV42;Winnipeg;;;;;;;;;;;;;
+PROV42;Fort Garry;;;;;;;;;;;;;
 PROV43;Nabiti;;;;;;;;;;;;;
 PROV44;Guantanamo Bay;;;;;;;;;;;;;
 PROV45;Marigot;;;;;;;;;;;;;
@@ -1191,6 +1191,8 @@ PROV4172;Dolonnur;;;;;;;;;;;;;
 PROV4173;Chosuutu;;;;;;;;;;;;;
 PROV4174;Babajan;;;;;;;;;;;;;
 PROV4175;Fuchuan;;;;;;;;;;;;;
+PROV4176;Moghwachi;;;;;;;;;;;;;
+PROV4177;Kwahadi;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
