Vietnam's epic name changes

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -159,7 +159,12 @@ CAN_conservative;Conservative Party of Canada;;;;;;;;;;;;;
 CAN_reactionary;Tories;;;;;;;;;;;;;
 CAN_liberal_1;Red Party;;;;;;;;;;;;;
 CAN_liberal_2;Liberal Party of Canada;;;;;;;;;;;;;
-DAI;Dai Nam;;;;;;;;;;;;;
+DAI;Vietnam;;;;;;;;;;;;;
+DAI_absolute_monarchy;Dai Nam;;;;;;;;;;;;;
+DAI_prussian_constitutionalism;Dai Nam;;;;;;;;;;;;;
+DAI_hms_government;Dai Nam;;;;;;;;;;;;;
+DAI_democracy;Vietnam;;;;;;;;;;;;;
+DAI_proletarian_dictatorship;Socialist Republic of Vietnam;;;;;;;;;;;;;
 DAI_communist;Viet Nam Cong san Ðang;;;;;;;;;;;;;
 ENG_communist;Communist Party of Great Britain;;;;;;;;;;;;;
 ENG_conservative;Tory Party;;;;;;;;;;;;;
