--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1606,8 +1606,8 @@ EVTDESC1848249533;\n\nThe $FROMCOUNTRY_ADJ$ have surrendered in Somaliland, and 
 EVTDESC184824967;\n\nThe $FROMCOUNTRY_ADJ$ have attacked us in Somaliland, and they are clearly superior militarily. Should we put up a fight?;;;;;;;;;;;;;
 EVTDESC184824968;\n\nThe $FROMCOUNTRY_ADJ$ have surrendered in Somaliland, and ceded Laascaanood to us.;;;;;;;;;;;;;
 EVTDESC18482496;\n\nWe have defeated the Tripolitanian rebels and we can now establish a vilayet in its place, as the South is still too unstable for direct rule.;;;;;;;;;;;;;
-EVTDESC184824988;\n\nOur state might deserve independence after all these years of oppression..;;;;;;;;;;;;;
-EVTDESC184824989;\n\n$FROMCOUNTRY$ has decided to wait for the Mahdi alone.;;;;;;;;;;;;;
+EVTDESC184824988;\n\nOur state might deserve independence after all these years of oppression. The regime that declares our autonomy is traitorous and must be stopped. If we should declare independence, it must be now or never.;;;;;;;;;;;;;
+EVTDESC184824989;\n\n$FROMCOUNTRY$ has left our administration, and decided to wait for the Mahdi alone. This is clearly a move provoked by outside powers to destabilize our state.;;;;;;;;;;;;;
 EVTDESC184824991;\n\nThe Senussi have conquered the Oasis of Siwa, effectively annexing it from our local rulers.;;;;;;;;;;;;;
 EVTDESC184825001;\n\nThe $FROMCOUNTRY_ADJ$ aim to destroy our state, should we claim Tripolitania? We have supporters in the region that would help us to take over.;;;;;;;;;;;;;
 EVTDESC18482501;\n\nThe Senussi own lands in the Sahara Desert we lay claim to -- should we force them to leave?;;;;;;;;;;;;;
