--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8675,7 +8675,7 @@ PROV47;Winisk;Winisk;Winisk;;Winisk;;;;;;;;;
 PROV48;Fort Albany;Fort Albany;Fort Albany;;Fuerte Albany;;;;;;;;;
 PROV50;Zagaakwaan;Zagaakwaan;Zagaakwaan;;Zagaakwaan;;;;;;;;;
 PROV51;Sault Ste Marie;Sault Ste Marie;Sault Ste Marie;;Sault Ste Marie;;;;;;;;;
-PROV53;Barrie;Barrie;Barrie;;Barrie;;;;;;;;;
+PROV53;Fort Willow;Fort Willow;Fort Willow;;Fort Willow;;;;;;;;;
 PROV54;Windsor;Windsor;Windsor;;Windsor;;;;;;;;;
 PROV55;Hamilton;Hamilton;Hamilton;;Hamilton;;;;;;;;;
 PROV56;Kingston;Kingston;Kingston;;Kingston;;;;;;;;;
