--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9031,7 +9031,7 @@ PROV516;Jaén;Jaén;Jaen;;Jaén;;;;;;;;;
 PROV517;Gibraltar;Gibraltar;Gibraltar;;Gibraltar;;;;;;;;;
 PROV518;Porto;;;;;;;;;;;;;
 PROV519;Vila Real;Vila Real;Vila Real;;Villarreal;;;;;;;;;
-PROV520;Covilhã;Covilhã;Covilha;;Covilha;;;;;;;;;
+PROV520;Covilhã;Covilhã;Covilhã;;Covilha;;;;;;;;;
 PROV522;Coimbra;Coïmbre;Coimbra;;Coimbra;;;;;;;;;
 PROV523;Abrantes;Abrantes;Abrantes;;Abrantes;;;;;;;;;
 PROV524;Setúbal;;;;;;;;;;;;;
