--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1215,20 +1215,14 @@ JAM_communist;Worker's Party;Worker's Party;Worker's Party;;;;;;;;;;;
 JAM_radical;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 JAM_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
 JAP_democracy;Japan;;;;;;;;;;;;;
+JAP_ADJ;Japanese;;;;;;;;;;;;;
 JAP_absolute_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_absolute_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_semi_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_semi_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_proletarian_dictatorship;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_proletarian_dictatorship_ADJ;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_prussian_constitutionalism;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_prussian_constitutionalism_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_prussian_constitutionalism;The Shogunate of Japan;;;;;;;;;;;;;
 JAP_absolute_monarchy;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_absolute_monarchy_ADJ;Tokugawa;;;;;;;;;;;;;
-JAP_hms_government;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_hms_government_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_hms_government;The Shogunate of Japan;;;;;;;;;;;;;
 JAP_reactionary;Handoutou;Faction Shogunate;Shogunate Faction;;;;;;;;;;;
 JAP_conservative;Rikken Teiseitou;Faction de la cour;Court Faction;;;;;;;;;;;
 JAP_conservative_2;Rikken Kaishintou;Faction impérialiste;Imperialist Faction;;;;;;;;;;;
@@ -2323,6 +2317,9 @@ TUR_prussian_constitutionalism;The Ottoman Empire;;;;;;;;;;;;;
 TUR_prussian_constitutionalism_ADJ;Ottoman;;;;;;;;;;;;;
 TUR_hms_government;The Ottoman Empire;;;;;;;;;;;;;
 TUR_hms_government_ADJ;Ottoman;;;;;;;;;;;;;
+TUR_absolute_empire_ADJ;Ottoman;;;;;;;;;;;;;
+TUR_semi_constitutional_empire_ADJ;Ottoman;;;;;;;;;;;;;
+TUR_constitutional_empire_ADJ;Ottoman;;;;;;;;;;;;;
 TUR_parliamentary_republic;Turkish Free State;;;;;;;;;;;;;
 TUR_proletarian_dictatorship;Turkish Socialist Republic;;;;;;;;;;;;;
 TUR_proletarian_dictatorship_ADJ;Turkish;;;;;;;;;;;;;
