--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8694,7 +8694,7 @@ PROV72;Truro;Truro;Truro;;Truro;;;;;;;;;
 PROV73;Cape Breton Island;Cape Breton Island;Cape Breton Island;;Isla del Cabo Breton;;;;;;;;;
 PROV74;Saint Johns;Saint-John's;Saint Johns;;Saint Johns;;;;;;;;;
 PROV76;Hopedale;Hopedale;Hopedale;;Hopedale;;;;;;;;;
-PROV77;St Pierre & Miquelon;Saint-Pierre et Miquelon;St Pierre & Miquelon;;San Pedro y Miguelón;;;;;;;;;
+PROV77;Saint-Pierre-et-Miquelon;Saint-Pierre et Miquelon;St Pierre & Miquelon;;San Pedro y Miguelón;;;;;;;;;
 PROV80;Walla Walla;Walla Walla;Walla Walla;;Walla Walla;;;;;;;;;
 PROV87;Monterrey;Monterrey;Monterrey;;Monterrey;;;;;;;;;
 PROV89;Los Ángeles;Los Ángeles;Los Ángeles;;Los Ángeles;;;;;;;;;
@@ -10432,7 +10432,7 @@ PROV2280;Guayaquil;Guayaquil;Guayaquil;;Guayaquil;;;;;;;;;
 PROV2282;Loja;Loja;Loja;;Loja;;;;;;;;;
 PROV2283;Zamora;Zamora;Zamora;;Zamora;;;;;;;;;
 PROV2284;Tena;Tena;Tena;;Tena;;;;;;;;;
-PROV2285;Galápagos;Galapagos;Galapagos;;Galápagos;;;;;;;;;
+PROV2285;Galápagos Islands;Galapagos;Galapagos;;Galápagos;;;;;;;;;
 PROV2286;Caballococha;Caballococha;Caballococha;;Caballococha;;;;;;;;;
 PROV2287;Yurimaguas;Yurimaguas;Yurimaguas;;Yurimaguas;;;;;;;;;
 PROV2288;Iquitos;Iquitos;Iquitos;;Iquitos;;;;;;;;;
@@ -11387,7 +11387,7 @@ ENG_300;South East England;Angleterre du sud-est;Südostengland;;Inglaterra suror
 ENG_303;South Central England;Angleterre du céntre;Südmittelegland;;Inglaterra surcentral;;;;;;;;;
 ENG_296;South West England;Angleterre du sud-ouest;Südwestengland;;Inglaterra suroccidental;;;;;;;;;
 ENG_1258;Assam;Assam;Assam;;Assam;;;;;;;;;
-FRA_77;Saint Pierre and Miquelon;Saint-Pierre-et-Miquelon ;Saint Pierre und Miquelon;;San Pedro y Miguelón;;;;;;;;;
+FRA_77;Saint-Pierre-et-Miquelon;Saint-Pierre-et-Miquelon ;Saint Pierre und Miquelon;;San Pedro y Miguelón;;;;;;;;;
 SPA_513;Granada;Grenade;Granada;;Granada;;;;;;;;;
 SPA_512;Andalucía;Andalousie;Andalusien;;Andalucía;;;;;;;;;
 SPA_484;Extremadura;Estrémadure;Extremadura;;Extremadura;;;;;;;;;
