no fake gran colombia

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -858,7 +858,7 @@ CIR_reactionary;Partiye Natsiya;;;;;;;;;;;;;
 CIR_radical;Partiye Fit Bedzer;;;;;;;;;;;;;
 CIR_communist;Partiye Zefediz;;;;;;;;;;;;;
 CIR_fascist;Partiye Lepqh;;;;;;;;;;;;;
-CLM_fascist_dictatorship;Gran Colombia;;;;;;;;;;;;;
+CLM_fascist_dictatorship;Granadine State;;;;;;;;;;;;;
 CLM_absolute_monarchy;New Granada;;;;;;;;;;;;;
 CLM_prussian_constitutionalism;New Granada;;;;;;;;;;;;;
 CLM_hms_government;New Granada;;;;;;;;;;;;;
