fixed a bit loc files

--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -31,7 +31,7 @@ EVTDESC127841;\n\nAfter more than 5 years of fighting guerilla warfare and Javan
 EVTDESC127850;\n\nAfter more than 5 years of fight against the Dutch, we finally won against our colonizers.;;;;;;;;;;;;;
 EVTDESC127843;\n\nAfter more than 5 years of fight against the Dutch, we lost our independence and lands to the Dutch.;;;;;;;;;;;;;
 EVTDESC127844;\n\nAfter more than 5 years of fighting guerilla warfare and Javanese rebels, we catastrophically lost our control over Java, and our domination over the East Indies is weaker by the day.;;;;;;;;;;;;;
-EVTDESC184823113;\n\nLouren§o Marques has a small Portuguese garrison, which somewhat holds to the surrounding lands. Should we raid such weak force?;;;;;;;;;;;;;
+EVTDESC184823113;\n\nLourenço Marques has a small Portuguese garrison, which somewhat holds to the surrounding lands. Should we raid such weak force?;;;;;;;;;;;;;
 EVTDESC184823115;\n\nOur raid has been able to get our fair share of Delagoa Bay and looted Lourenco Marques.;;;;;;;;;;;;;
 EVTDESC184823116;\n\nOur raid has been able to get our fair share of Delagoa Bay and looted Lourenco Marques, but the Portuguese have retaliated with an expedition.;;;;;;;;;;;;;
 EVTDESC16061993;\n\nWe have defeated the Christinos and taken control of Spain. Carlos has assended the throne as Spain enters a new era.;;;;;;;;;;;;;
@@ -51,7 +51,7 @@ EVTDESC97147;\n\nThe Buchanan arbitration has decided against our claims, and we
 EVTDESC97148;\n\nThe Buchanan arbitration has rightfully sided with our claims, awarding the entire Puna de Atacama to us.;;;;;;;;;;;;;
 EVTDESC97149;\n\nThe Buchanan arbitration has concluded on a compromise, awarding Chile a small part of the Puna and giving the rest to Argentina;;;;;;;;;;;;;
 EVTDESC971551;\n\nThe government of $FROMCOUNTRY$ has agreed to work to put an end to our current territorial disputes and to establish a friendship between $FROMCOUNTRY$ and $COUNTRY$.;;;;;;;;;;;;;
-EVTDESC971561;\n\n$The $COUNTRY_ADJ$ government has refused our proposal to fix our territorial disputes, citing that 'There is no need for such an agreement'.;;;;;;;;;;;;;
+EVTDESC971561;\n\nThe $COUNTRY_ADJ$ government has refused our proposal to fix our territorial disputes, citing that 'There is no need for such an agreement'.;;;;;;;;;;;;;
 EVTDESC97157;\n\nFollowing cooperation between Argentina and $COUNTRY$, it is now finally time we solve our border dispute in Patagonia. To ensure a fair result, the arbitration will be done by the United Kingdom.;;;;;;;;;;;;;
 EVTDESC97158;\n\nAfter agreeing to the May Pacts, $COUNTRY_ADJ$ and $FROMCOUNTRY$ diplomats have gathered to finally decide on the boundaries between $COUNTRY$ and $FROMCOUNTRY$, with British arbitration;;;;;;;;;;;;;
 EVTDESC971601;\n\nOur theory regarding the borders of $COUNTRY$ in Patagonia has been entirely favoured, granting us the entire disputed area.;;;;;;;;;;;;;
