fixed all remaining descs from submods

--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -125,7 +125,7 @@ EVTDESC123667;\n\nLandowners have revolted against liberal reforms, such as the 
 EVTDESC123668;\n\nAfter losing the elections, general Jos© Mar­a Melo has staged a radical coup against the government, beginning a civil war backed by the artisans of Bogot¡.;;;;;;;;;;;;;
 EVTDESC123669;\n\nThe conservative government of Mariano Ospina Rodr­guez has centralized our country, however liberal agitation to restore provincial sovereignty has boiled over into a rebellion.;;;;;;;;;;;;;
 EVTDESC123670;\n\nRecent secularization measures to the education system of president Aquileo Parra have led to an uprising among conservatives in Antioquia, Cauca and Tolima supported by the local clergy.;;;;;;;;;;;;;
-EVTDESC123674;\n\nThe radicals of Santander accused President Rafael Nº±ez of interfering in the internal affairs of the States and began a revolt which has spread to a national level.;;;;;;;;;;;;;
+EVTDESC123674;\n\nThe radicals of Santander accused President Rafael Narváez of interfering in the internal affairs of the States and began a revolt which has spread to a national level.;;;;;;;;;;;;;
 EVTDESC123675;\n\nRecent conservative laws drafted by president Miguel Antonio Caro have exacerbated tensions with the liberals, who, led by General Siervo Sarmiento, have revolted to depose the government.;;;;;;;;;;;;;
 EVTDESC97133;\n\nThe governor of the Argentine province of Corrientes, soon planning a rebellion against the regime of Juan Manuel de Rosas, has proposed an alliance with us;;;;;;;;;;;;;
 EVTDESC97134;\n\nThe farrapos have agreed to sign an alliance and mutual aid treaty with us in secret, greatly improving our relations and commerce.;;;;;;;;;;;;;
@@ -1783,3 +1783,34 @@ EVTDESC477877792;\n\nIf $FROMCOUNTRY$ is the country you want to interact with, 
 EVTDESC477877793;\n\nThis event lets your overlord interact with you. If you are a player, just close this.;;;;;;;;;;;;;
 WARSHIPCOMMISSIONWHICH;\n\nWe must decide what type of warship we wish to commission.;;;;;;;;;;;;;
 WARSHIPCOMMISSIONREADY;\n\nThe warship we commissioned is ready and arrived in one of our naval bases.;;;;;;;;;;;;;
+EVTDESC18300584;\n\nAll western slavs are an integral part of our new nation and share equal rights.;;;;;;;;;;;;;
+EVTDESC2159212;\n\nWe must return Zapadoslavian cores.;;;;;;;;;;;;;
+EVTDESC429434;\n\nYou are now allowed to larp.;;;;;;;;;;;;;
+EVTDESC4347467;\n\nAll Romanic languages are an integral part of our new nation and share equal rights.;;;;;;;;;;;;;
+EVTDESC837592;\n\nAll South Americans are an integral part of our new nation and share equal rights.;;;;;;;;;;;;;
+EVTDESC8374593;\n\nAll Polish peoples are an integral part of our new nation and share equal rights.;;;;;;;;;;;;;
+EVTDESC3753854;\n\nAll Polynesians are an integral part of our new nation and share equal rights.;;;;;;;;;;;;;
+EVTDESC950043;\n\nYou are Celtic now.;;;;;;;;;;;;;
+THANKSTUMALTA;\n\nThanks for playing the Knights of Malta!;;;;;;;;;;;;;
+EVTDESC4206976;\n\n$FROMCOUNTRY$ has called for a union of all hispanic american nations, but it is clear their current government would be ruling above all, even in a federation. An interesting idea indeed, but it threatens our sovereignity directly.;;;;;;;;;;;;;
+EVTDESC4206971;\n\nWith the union done, it's time to decide on a new capital.;;;;;;;;;;;;;
+EVTDESC96058;\n\nRussia has entirely defeated us, leaving no choice but to accept their catastrophic terms.;;;;;;;;;;;;;
+EVTDESC23456434;\n\nTo change your tag more efficiently in MC click OK.;;;;;;;;;;;;;
+EVTDESC123615;\n\nWe must return the Celtic Union's cores.;;;;;;;;;;;;;
+EVTDESC8395763;\n\nYou have launched with Shattered World and Fantasy Nations at the same time despite them being incompatible. All FN content is included in SW, so just launch SW.;;;;;;;;;;;;;
+DUMBCAPITALCHANGEDESC;\n\nWhich from the following should be our capital?;;;;;;;;;;;;;
+DELTOCCULTURES;\n\nNow that we have proclaimed a nation of Celts, what group shall lead the union?;;;;;;;;;;;;;
+WHITEFLEETUSA;\n\nThe USA have sent a grand, white-painted fleet on a world tour as a show of force. They are now arriving in one of our harbors.;;;;;;;;;;;;;
+WHITEFLEETUSARETURNS;\n\nAfter its glorious circumnavigation, the White Fleet has returned to its home port in Hampton Roads, Virginia.;;;;;;;;;;;;;
+MONTENEGROSUBSIDYLOST;\n\nRussia has refused to subsidy us.;;;;;;;;;;;;;
+MONTENEGROSUBSIDYWON;\n\nOur Russian benefactors have agreed to send us generous monetary aid.;;;;;;;;;;;;;
+MONTENEGROSUBSIDY;\n\nOur Russian benefactors have agreed to send us monetary aid.;;;;;;;;;;;;;
+KANKOMARUSHIP;\n\nKing William III of the Netherlands has sent us a steam-powered barque as a gift, the very first in our navy.;;;;;;;;;;;;;
+FLUFFNOENGALLY;\n\nThe UK has denied our alliance request.;;;;;;;;;;;;;
+FLUFFEENTENTEREFERENCE;\n\nBritain has agreed to forming an Entente.;;;;;;;;;;;;;
+ENTENTEISCOMINGTOTOWN;\n\nSitting our many joint victories and history of amicable relations, France has proposed we form an alliance, the Entente Cordiale.;;;;;;;;;;;;;
+MALVINASWASALLFORSHEEP;\n\nNow that we have captured Islas Malvinas, and with the current sheep farming boom in Patagonia, it is time that we also help expand this boom to the islands.;;;;;;;;;;;;;
+BOOMHAVESOMEWOOL;\n\nSince making a region a colony will rid it of all modifiers, this is an event to restore the patagonia wool boom. It will only happen once, so be careful.;;;;;;;;;;;;;
+EVTDESC8365925;\n\nDue to a change in our geopolitical situation, we have come to accept the Min-speaking peoples as equal members of our society.;;;;;;;;;;;;;
+EVTDESC4207101;\n\nAfter defeating the USA, the Louisiana Territory is under our control now, what should we do with it?;;;;;;;;;;;;;
+THANKSFORMCTOYOU;\n\nThanks for playing MC!;;;;;;;;;;;;;
