Korean RGO edits

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -811,7 +811,7 @@ louisville;Grassland;;;;;;;;;;;;;
 balearicislands;Steppe;;;;;;;;;;;;;
 yalta;Montane Forest;;;;;;;;;;;;;
 cagliari;Farmlands;;;;;;;;;;;;;
-hangyang;Farmlands;;;;;;;;;;;;;
+hangyang;Floodplain Farmlands;;;;;;;;;;;;;
 christianchurch;Grassland;;;;;;;;;;;;;
 oryol;Farmlands;;;;;;;;;;;;;
 oland;Island;;;;;;;;;;;;;
