resource adjustments, aland control tile

--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -135,7 +135,7 @@ cleanup_hsa_cores_desc;This decision gives HSA cores on Hispanic American Cores 
 cleanup_cum_cores_title;Cleanup CUM Cores;;;;;;;;;;;;;
 cleanup_cum_cores_desc;This decision gives CUM cores on North American Cores that DO NOT have CUM cores for some reason.;;;;;;;;;;;;;
 EVTDESC4207008;The renaming mechanic has been reworked to be an event so you can balance yourself the cost to speed by the sheer size of its possible effects, having the option to choose how often you want renaming to happen.;;;;;;;;;;;;;
-strait_control_tile;§BStrait Control Tile§!;;;;;;;;;;;;;
+strait_control_tile;§GStrait Control Tile§!;;;;;;;;;;;;;
 distributism_cooldown;Just so you don't spam distributism;;;;;;;;;;;;;
 EVTDESC4207009;Fundidora de Fierro y Acero de Monterrey, S.A. or La Maestranza is a new company for iron and steel works founded in Monterrey by industrial entrepreneur Vicente Ferrara, American and French businessmen Eugenio Kelly and León Signoret, and Spanish banker Antonio Basagoiti Arteta. The foundry is dedicated to the production of non-flat iron and steel items, such as rails, wire rod, corrugated rod, structures, railway wheels and others.;;;;;;;;;;;;;
 fundidora;La Maestranza;;;;;;;;;;;;;
