--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -430,6 +430,7 @@ frigate;Frigate;Frégate;Fregatte;;Fragata;;;;;;;;;
 manowar;Man'o'war;Vaisseau de ligne;Kriegsschiff;;Buque de guerra;;;;;;;;;
 ironclad;Ironclad;Cuirassé;Panzerschiff;;Acor. Ironclad;;;;;;;;;
 dreadnought;Dreadnought;Cuirassé de classe Dreadnought;Großkampfschiff;;Acor. Dreadnought;;;;;;;;;
+fast_battleship;Fast Battleship;;;;;;;;;;;;;
 clipper_transport;Clipper Transport;Transport à voile;Klipper-Transporter;;Clíper de transporte;;;;;;;;;
 steam_transport;Steam Transport;Transport à vapeur;Dampf-Transporter;;Transporte a vapor;;;;;;;;;
 monitor;Monitor;Cuirassé de classe Monitor;Schlachtschiff;;Monitor;;;;;;;;;
