--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2916,3 +2916,4 @@ SAINTHELENAEIC;With the Government of India Act of 1833, the East India Company 
 WEWONBATTLEMARICOYEAHMADEUP;We have managed to win a battle near the Marico River against $FROMCOUNTRY$ and we can now settle in the plains east of it for centuries to come.;;;;;;;;;;;;;
 GREATWADKALTABUONE;The $FROMCOUNTRY_ADJ$ have accepted sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
 GREATWADKALTABUTWO;The $FROMCOUNTRY_ADJ$ have rejected sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
+NORTHERNZANZIBARNOOO;The British have landed in Zanzibar and demanded that we cede Pwani wa Viswani and Pwani wa Nyali provinces, from Lamu to Mambasa. They are lands rich in cash crops and trade, and a core part of our state for decades. Should we cede the territory to try and weather the storm, or expulse the British from our lands?;;;;;;;;;;;;;
