--- a/GFM/localisation/0000_Sea_Provinces.csv
+++ b/GFM/localisation/0000_Sea_Provinces.csv
@@ -98,7 +98,7 @@ PROV2733;Long Forties;;;;;;;;;;;;;
 PROV2881;Dogger Bank;;;;;;;;;;;;;
 PROV2734;Oyster Ground;;;;;;;;;;;;;
 PROV2868;Broad Fourteens;;;;;;;;;;;;;
-PROV2722;Frisian Front;;;;;;;;;;;;;
+PROV2722;Zuiderzee;;;;;;;;;;;;;
 PROV2721;German Bight;;;;;;;;;;;;;
 PROV2720;Skagerrack Approach;;;;;;;;;;;;;
 PROV2871;Central North Sea;;;;;;;;;;;;;
