--- a/GFM/localisation/00_GSG_claims.csv
+++ b/GFM/localisation/00_GSG_claims.csv
@@ -38,7 +38,7 @@ claim_republican_borders_desc;Since regaining our freedom from the Austrians our
 claim_kingdom_of_leon_title;The Kingdom of Leon;;;;;;;;;;;;;
 claim_kingdom_of_leon_desc;For the first time in centuries the Leonese people are free from Castilian rule, what better way to celebrate this than to reclaim our old holdings in Iberia?;;;;;;;;;;;;;
 claim_the_highlands_title;Greater Assyria;;;;;;;;;;;;;
-claim_the_highlands_desc;For the first time in millenia the Assyrian peoples have a nation of their own, let us extend it to all our peoples for the glory of god!;;;;;;;;;;;;;
+claim_the_highlands_desc;For the first time in millennia the Assyrian peoples have a nation of their own, let us extend it to all our peoples for the glory of god!;;;;;;;;;;;;;
 alaskan_nationalism_title;Extending Alaska;;;;;;;;;;;;;
 alaskan_nationalism_desc;The borders of Free Alaska need to be extended, our people freeze and starve in our tiny colony so the only logical choice is to move south.;;;;;;;;;;;;;
 second_irredentism_title;Irredentismo Italiano;;;;;;;;;;;;;
