fixes, adjustments, Australian lake renaming

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1591,10 +1591,10 @@ PROV3629;Lake Dubawnt;;;;;;;;;;;;;
 PROV3630;Garabogazköl Aylagy;;;;;;;;;;;;;
 PROV3631;Chott al-Djerid;;;;;;;;;;;;;
 PROV3632;Namakzar;;;;;;;;;;;;;
-PROV3633;Lake Mackay;;;;;;;;;;;;;
-PROV3634;Lake Eyre;;;;;;;;;;;;;
-PROV3635;Lake Frome;;;;;;;;;;;;;
-PROV3636;Lake Torrens;;;;;;;;;;;;;
+PROV3633;Wilkinkarra;;;;;;;;;;;;;
+PROV3634;Kati Thanda;;;;;;;;;;;;;
+PROV3635;Munda;;;;;;;;;;;;;
+PROV3636;Ngarndamukia;;;;;;;;;;;;;
 PROV3637;Lake Gairdner;;;;;;;;;;;;;
 PROV3638;Chott Melghir;;;;;;;;;;;;;
 PROV3639;Chott Felrhir;;;;;;;;;;;;;
