everything but pops

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -125,9 +125,12 @@ PROV4093;Quili Malal;;;;;;;;;
 PROV4027;Chaotung;;;;;;;;;
 PROV518;Porto;;;;;;;;;
 PROV4026;Guarda;;;;;;;;;
-PROV4028;Preah Sihanouk;;;;;;;;;
+PROV4028;Preah Sihano    uk;;;;;;;;;
 PROV4025;Kampong Thom;;;;;;;;;
 PROV522;Leiria;;;;;;;;;
+PROV4178;Kilai;;;;;;;;;
+PROV4179;Pilam;;;;;;;;;
+PROV2562;Yushan;;;;;;;;;
 PUR;Purran;;;;;;;;;
 BRZ_colonial_company_2;France Antarctique;;;;;;;;;
 PAA_colonial_company_2;France Équinoxiale;;;;;;;;;
