--- a/GFM/localisation/0_cb_types.csv
+++ b/GFM/localisation/0_cb_types.csv
@@ -100,6 +100,10 @@ scripted_war_big;Declaration of War;;;;;;;;;;;
 scripted_war_big_short;Demand a peace treaty;;;;;;;;;;;
 scripted_war_big_desc;Force another 即country劬 to negotiate a peace treaty;;;;;;;;;;;
 scripted_war_big_setup;Demand a peace treaty;;;;;;;;;;;
+scripted_war_huge;Declaration of War;;;;;;;;;;;
+scripted_war_huge_short;Demand a peace treaty;;;;;;;;;;;
+scripted_war_huge_desc;Force another 即country劬 to negotiate a peace treaty;;;;;;;;;;;
+scripted_war_huge_setup;Demand a peace treaty;;;;;;;;;;;
 humiliate;Humiliate;Humilier;Erniedrigen;;;;;;;;;;;
 humiliate_short;Humiliate $RECIPIENT$;Humilier $RECIPIENT$;$RECIPIENT$ erniedrigen;;;;;;;;;;;
 humiliate_desc;Show our military might by humiliating an enemy 即country劬, thus increasing our 即prestige劬 while lowering theirs;Afficher notre puissance militaire en humiliant un 即pays劬 ennemi et en augmentant notre 即prestige劬 tout en r嶮uisant le leur;Zeigen Sie unsere Milit酺macht durch Erniedrigung eines feindlichen 即Landes劬, wodurch Sie unser 即Prestige劬 steigern und ihres verringern.;;;;;;;;;;;
