native event WIP

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -439,3 +439,4 @@ ryukyu_slot_4;to further integrate its land;;;;;;;;;;;;;
 ryukyu_slot_5;and the world will be informed of our legitimate claim to§p;;;;;;;;;;;;;
 ryukyu_end;and its surrounding islands;;;;;;;;;;;;;
 ryukyu_dynamic_test;gains cores on;;;;;;;;;;;;;
+native_option_text;Review possible treaty options...;;;;;;;;;;;;;
