--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2976,3 +2976,6 @@ TZEKOHRDISPUTEONE;\n\nThe lands now in Northern Liberia, centered in the city of
 TZEKOHRDISPUTETWO;\n\nTzekohr, part of our northern possessions, has been claimed by $FROMCOUNTRY$ on the grounds that it is ridden with banditry, and that the Toma Konianke people they claim to protect are under attacks in our lands. This is clearly a move to annex more land from our state, which they see as defenceless.;;;;;;;;;;;;;
 TZEKOHRDISPUTETHREE;\n\nLiberia has refused to negotiate our border with them in Guinea, escalating the crisis even more. We must consider further escalation, as backing down is not an option to such insults.;;;;;;;;;;;;;
 TZEKOHRDISPUTEFOUR;\n\nLiberia has finally accepted to cede Tzekohr to our Guinea colonial possession, making our border more stable and secure.;;;;;;;;;;;;;
+NATIVEVENTONE;\n\nOur country borders Native American countries that accept native treaties. Choose which nation you want to pact with.;;;;;;;;;;;;;
+colonization_america_test_one_title;Test Decision for Native-USA Mechanics;;;;;;;;;;;;;
+colonization_america_test_one_desc;DOESN'T HAVE EFFECTS OR USES, WORK IN PROGRESS. This decision is a test on how to use Dynamic Loc to code a new mechanic for the player. It does nothing and it won't close if you click it, you can try it out if you want.;;;;;;;;;;;;;
