--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3456,8 +3456,9 @@ LUR_ADJ;Luristani;;;;;;;;;;;;;
 KRA_proletarian_dictatorship;Krakow Commune;;;;;;;;;;;;;
 FLC;Fulani Caliphate;;;;;;;;;;;;;
 FLC_democracy;Fulani Republic;;;;;;;;;;;;;
-FLC_proletarian_dictatorship;Fulani Peoples Union;;;;;;;;;;;;;
-FLC_fascist_dictatorship;Fulani Ethnic State;;;;;;;;;;;;;
+FLC_radical_republic;Fulani Republic;;;;;;;;;;;;;
+FLC_proletarian_dictatorship;Fulani Peoples' Union;;;;;;;;;;;;;
+FLC_fascist_dictatorship;Fulani Empire;;;;;;;;;;;;;
 FLC_ADJ;Fulani;;;;;;;;;;;;;
 NCC;Nicaragua;;;;;;;;;;;;;
 NCC_ADJ;Nicaraguan;;;;;;;;;;;;;
