--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -718,7 +718,7 @@ PROV3540;Menukung;;;;;;;;;;;;;
 PROV3542;Lake Okeechobee;;;;;;;;;;;;;
 PROV3543;Lago Tahoe;;;;;;;;;;;;;
 PROV3544;Lago Izabal;;;;;;;;;;;;;
-PROV3554;Socaire;;;;;;;;;;;;;
+PROV3554;Huaitiquina;;;;;;;;;;;;;
 PROV3555;Wall-che-vtá;;;;;;;;;;;;;
 PROV3557;Amawáka;;;;;;;;;;;;;
 PROV3558;Esket;;;;;;;;;;;;;
